[metadata]
name = SEL
version = 7.17.1
description = Simple Elastic Language
long_description = file: README.md
author = Arnaud Parant

[options]
package_dir=
    =./
packages=
    sel

python_requires = >= 3.7

setup_requires =
    setuptools >= 40.0
    pip >= 24.0

install_requires =
    elasticsearch==7.17.9
    pyPEG2==2.15.2
    python-dateutil==2.6

[options.extras_require]
test = pytest==5.4.2; astroid>=2.3.0, <2.5; pylint>=2.5.2, <2.6.1; pytest-cov>=2.10.1