[metadata]
name = SEL Server
version = 2.4.1
description = Simple Elastic Language Server
long_description = file: README.md
author = Arnaud Parant

[options]
package_dir=
    =/src
packages=
    sel_server

python_requires = >=3.6

setup_requires =
    setuptools >= 40.0
    pip >= 20.1

install_requires =
    fastapi>=0.58.0, <1.0
    uvicorn>=0.11.5, <0.17.0
    connexion[swagger-ui]>=2.0.0,<2.5.1

[options.extras_require]
test = pytest==5.4.2; astroid>=2.3.0, <2.5; pylint>=2.5.2, <2.6.1; pytest-cov>=2.10.1